--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -31,11 +31,14 @@
 
 \maketitle
 
+
+
 In the present work, we study the swelling-induced wrinkling of a porous gel sheet sandwiched between two viscous layers, with the whole system confined between two glass plates. As shown in Fig.~\ref{fig:dynamics}, the lateral confinement leads to saturation of the amplitude on the floor and ceiling followed by a cascade of secondary, ternary, etc. buckling. Such cascade buckling have been observed by~\cite{Roman1999} in a one dimensional macroscopic system, a sheet of steel forced to buckle. The 2D nature of our experiment creates nested patterns that could prove useful to design optical elements. In addition, one has to note that the primary wavelength is much smaller than the size of the system, implying that we are not in a simple buckling scenario but in a wrinkling instability. Our main result is to identify this selection mechanism.
 
 
 In the following, we will describe the physical chemistry that allows us to form such patterns. Then, we will model the situation and identify two possible selection mechanisms: either Darcy flow or Poiseuille flow. Finally we will compare our experimental data with the two models. Combining both Darcy and Poiseuille mechanisms will allow us to describe our data.
 
+\section*{Pattern formation}
 
 The slow acidification of a protein (sodium caseinate) solution up to the isoelectric pH induces gelation. Since caseins adsorb strongly to interfaces, the resulting gel sticks strongly to container walls, allowing rheological measurements. As shown in Fig.~\ref{fig:acidification}, further decrease of the pH beyond the isoeletric point weakens the gel. This non monotonous behaviour of the elastic modulus translates in a non monotonous mesh size in a microscopy cell (slit geometry) coated so that the casein could not adsorb on the top wall (Fig.~\ref{fig:acidification}c), i.e. in syn\ae{}resis (solvent expulsion) followed by swelling.
 
@@ -59,9 +62,26 @@ In a situation where the sheet of gel would be sitting (not sticking) to the flo
 \begin{equation}
 \lambda_D \sim h^{1/2} \alpha^{1/4} \Upsilon^{1/4}
 \end{equation}
-where $\Upsilon = B\tau/\eta$ is a dimensionless viscoelastic factor quantifying the relative stiffness of the sheet and the solvent at a characteristic time $\tau$. This expression stresses the kinetic nature of the wavelength selection. However we note that the wavelength of the primary pattern does not evolve with time (see Fig.~\ref{fig:dynamics} and Sup. Fig.~\ref{fig:growth}) once the gel is touching both walls, we can deduce the relevant $\tau$ from the growth of the primary pattern (see Supplementary Method for the precise definition).
+where $\Upsilon = B\tau/\eta$ is a dimensionless viscoelastic factor quantifying the relative stiffness of the sheet and the solvent at a characteristic time $\tau$. This expression stresses the kinetic nature of the wavelength selection. However we note that the wavelength of (a generation of) the pattern does not evolve with time (see Fig.~\ref{fig:dynamics} and Sup. Fig.~\ref{fig:growth}) once the gel is touching both walls, we can deduce the relevant $\tau$ from the growth of the  pattern (see Supplementary Method for the precise definition).
 
-Conversely, in a situation where the sheet of gel would be impervious ($\alpha\rightarrow 0$), destabilisation over a wavelength $\lambda$ would create a lubrication ($H\ll\lambda$) flow in the viscous layers. The longitudinal flux $Q$ is related to the longitudinal pressure gradient $q/\lambda$ by a Poiseuille flow expression $Q = \frac{H^3}{12\eta} \frac{q}{\lambda}$. Mass conservation relates
+Conversely, in a the simple case where the sheet of gel is in the middle of the cell ($H_1=H_2$) and impervious ($\alpha\rightarrow 0$), destabilisation over a wavelength $\lambda$ creates a lubrication ($H\ll\lambda$) flow in the viscous layers. By symmetry the lateral load across the gel $q$ is also the pressure difference over the wavelength. Using a Poiseuille profile for the flow, $\frac{dA}{dt} \sim q \frac{H^3}{\eta\lambda^2}$. Injecting this expression in Eq.~(\ref{eq:lstar}) yields the wavelength of the Poiseuille mode as
+\begin{equation}
+\lambda_P \sim (hH)^{1/2} \Upsilon^{1/6}
+\end{equation}
+where we recognise the scaling of the wrinkles of an elastic sheet on a thin ($H\ll\lambda$) elastic substrate~\cite{Cerda2003} where $\Upsilon$ would be the ratio between the flexural moduli of the film and substrate. Indeed, in lubrication or low Reynolds number one can consider a viscous film as elastic with effective moduli $\eta/\tau$~\cite{Biot1957,Boudaoud2001}.
+
+A more complete derivation of the models can be found in the Supplementary Method and yield the following prefactors:
+\begin{align}
+\lambda_D &= 2\pi h^{1/2}\alpha^{1/4}\left(\frac{\Upsilon}{12}\right)^{1/4}\\
+\lambda_P &= \pi\sqrt{hH}\left(\frac{2}{9}\Upsilon\right)^{1/6}
+\end{align}
+where $1/H^3 = 1/H_1^3 + 1/H_2^3$. The limiting case between the two models is for $H = H^* \equiv 2^{2/3} 3^{1/6} \alpha^{1/2} \Upsilon^{1/6}$.
+
+\section*{Experimental tests}
+
+The above models yield wavelengths of the same order in most of the cases we studied. Thus only systematic measurements of experimental $\lambda$ and all the parameters involved in either model allows to discriminate between them (see Supplementary Method for details on the measurements). As summarized in Supplementary Table~\ref{tab:data}, we changed the thickness of the cell, impacting $h$ and the maximal amplitude. We changed the composition and thus the stiffness of the gel and its permeability. We also changed systematically the viscosity of the solvent by adding glycerol, however this also impacted the gel stiffness, permeability and $\tau$. Finally, the only parameter we had no control on was the initial altitude of the gel before wrinklink ($H$) that to our knowledge varied randomly. However, we were able to obtain more data at small $H/H^*$ ratios by considering not only the primary patterns but also the secondary ones. Since the saturation of the primary pattern flattens the gel on the top and bottom walls, the secondary blisters always appear in a Darcy situation ($H\ll H^*$). Here the size of the blister is fixed as half of the size of the primary pattern as show on Fig.~\ref{fig:dynamics}c and $\tau$ is the variable parameter.
+
+Our results are displayed in Fig.~\ref{fig:DarcyPoiseuille}. Neither model alone is able to reproduce all the data. However considering only the points where $H<H^*$ (respectively $H>H^*$), the Darcy (resp. Poiseuille) model fits the data well albeit with a prefactor. Note that it would be easy to oversight the failure of the Poiseuille model at small wavelength by adding an unexplained offset. Nonetheless, a complete model (derived in Supplementary Methods), summing up the influence of both Poiseuille and Darcy dissipation shows a better agreement for all values of $H/H^*$.
 
 
 
