reformulations et répétitions

--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -33,14 +33,14 @@
 
 
 
-In the present work, we study the swelling-induced wrinkling of a porous gel sheet sandwiched between two viscous layers, with the whole system confined between two glass plates. As shown in Fig.~\ref{fig:dynamics}, the lateral confinement leads to saturation of the amplitude on the floor and ceiling followed by a cascade of secondary, ternary, etc. buckling. Such cascade buckling have been observed by~\cite{Roman1999} in a one dimensional macroscopic system, a sheet of steel forced to buckle. The 2D nature of our experiment creates nested patterns that could prove useful to design optical elements. In addition, one has to note that the primary wavelength is much smaller than the size of the system, implying that we are not in a simple buckling scenario but in a wrinkling instability. Our main result is to identify this selection mechanism.
+In the present work, we study the swelling-induced wrinkling of a porous gel sheet sandwiched between two viscous layers, with the whole system confined between two glass plates. As shown in Fig.~\ref{fig:dynamics}, the lateral confinement leads to saturation of the amplitude on the floor and ceiling followed by a cascade of secondary, ternary, etc. buckling. Such cascade buckling have been observed by~\cite{Roman1999} in a one dimensional macroscopic system, a sheet of steel forced to buckle. The 2D nature of our experiment creates nested patterns that could prove useful to design optical elements. In addition, one has to note that the primary wavelength is much smaller than the size of the system, implying that we are not in a simple buckling scenario but in a wrinkling instability. Our main goal is to identify the selection mechanism of the wavelength.
 
 
 In the following, we will describe the physical chemistry that allows us to form such patterns. Then, we will model the situation and identify two possible selection mechanisms: either Darcy flow or Poiseuille flow. Finally we will compare our experimental data with the two models. Combining both Darcy and Poiseuille mechanisms will allow us to describe our data.
 
 \section*{Pattern formation}
 
-The slow acidification of a protein (sodium caseinate) solution up to the isoelectric pH induces gelation. Since caseins adsorb strongly to interfaces, the resulting gel sticks strongly to container walls, allowing rheological measurements. As shown in Fig.~\ref{fig:acidification}, further decrease of the pH beyond the isoeletric point weakens the gel. This non monotonous behaviour of the elastic modulus translates in a non monotonous mesh size in a microscopy cell (slit geometry) coated so that the casein could not adsorb on the top wall (Fig.~\ref{fig:acidification}c), i.e. in syn\ae{}resis (solvent expulsion) followed by swelling.
+The slow acidification of a protein (sodium caseinate) solution up to the isoelectric pH induces gelation. Since caseins adsorb strongly to interfaces, the resulting gel sticks to container walls, allowing rheological measurements. As shown in Fig.~\ref{fig:acidification}, further decrease of the pH beyond the isoeletric point weakens the gel. This non monotonous behaviour of the elastic modulus translates in a non monotonous mesh size in a microscopy cell (slit geometry) coated so that the casein could not adsorb on the top wall (Fig.~\ref{fig:acidification}c), i.e. in syn\ae{}resis (solvent expulsion) followed by swelling.
 
 
 Figure~\ref{fig:sideview}b shows confocal measurements in the case where both top and bottom walls have been coated. Starting from an homogeneous solution (black margins correspond to the glass walls), the gel forms and simultaneously expels solvent on both sides. Since we have two clear interfaces between a protein rich phase and a protein poor (water) phase, we model the resulting situation as a porous elastic sheet of thickness $h$ sandwiched between two viscous layers of respective thicknesses $H_1$ et $H_2$ (see Fig.~\ref{fig:sideview}a). Relative increase in protein concentration during syn\ae{}resis can be deduced from the brighter fluorescence in second panel of Fig.~\ref{fig:sideview}b. Extracting the top and bottom surface of the gel phase allows for quantitative measurements of the relative volume (Fig.~\ref{fig:sideview}c) and excess surface area of the sheet of gel (Fig.~\ref{fig:sideview}d). We can thus confirm that the instability is due to swelling.
@@ -64,11 +64,11 @@ In a situation where the sheet of gel would be sitting (not sticking) to the flo
 \end{equation}
 where $\Upsilon = B\tau/\eta$ is a dimensionless viscoelastic factor quantifying the relative stiffness of the sheet and the solvent at a characteristic time $\tau$. This expression stresses the kinetic nature of the wavelength selection. However we note that the wavelength of (a generation of) the pattern does not evolve with time (see Fig.~\ref{fig:dynamics} and Sup. Fig.~\ref{fig:growth}) once the gel is touching both walls, we can deduce the relevant $\tau$ from the growth of the  pattern (see Supplementary Method for the precise definition).
 
-Conversely, in a the simple case where the sheet of gel is in the middle of the cell ($H_1=H_2$) and impervious ($\alpha\rightarrow 0$), destabilisation over a wavelength $\lambda$ creates a lubrication ($H\ll\lambda$) flow in the viscous layers. By symmetry the lateral load across the gel $q$ is also the pressure difference over the wavelength. Using a Poiseuille profile for the flow, $\frac{dA}{dt} \sim q \frac{H^3}{\eta\lambda^2}$. Injecting this expression in Eq.~(\ref{eq:lstar}) yields the wavelength of the Poiseuille mode as
+The opposite limiting case is when the sheet of gel is in the middle of the cell ($H_1=H_2$) and impervious ($\alpha\rightarrow 0$), destabilisation over a wavelength $\lambda$ creates a lubrication ($H\ll\lambda$) flow in the viscous layers. By symmetry the lateral load across the gel $q$ is also the pressure difference over the wavelength. Using a Poiseuille profile for the flow, $\frac{dA}{dt} \sim q \frac{H^3}{\eta\lambda^2}$. Injecting this expression in Eq.~(\ref{eq:lstar}) yields the wavelength of the Poiseuille mode as
 \begin{equation}
 \lambda_P \sim (hH)^{1/2} \Upsilon^{1/6}
 \end{equation}
-where we recognise the scaling of the wrinkles of an elastic sheet on a thin ($H\ll\lambda$) elastic substrate~\cite{Cerda2003} where $\Upsilon$ would be the ratio between the flexural moduli of the film and substrate. Indeed, in lubrication or low Reynolds number one can consider a viscous film as elastic with effective moduli $\eta/\tau$~\cite{Biot1957,Boudaoud2001}.
+where we recognise the scaling of the wrinkles of an elastic sheet on a thin ($H\ll\lambda$) elastic substrate~\cite{Cerda2003} where $\Upsilon$ would be the ratio between the flexural moduli of the film and substrate. Indeed, in lubrication or low Reynolds number one can consider a viscous film as elastic with effective Young modulus $3\eta/\tau$~\cite{Biot1957,Boudaoud2001}.
 
 A more complete derivation of the models can be found in the Supplementary Method and yield the following prefactors:
 \begin{align}
